@@ -1,6 +1,7 @@
 Revision history for Padre-Plugin-Nopaste
 
  - Support Task API 2.0 (CHORNY)
+ - Added Padre::Plugin::Nopaste::Task (CHORNY)
 
 0.2.1 Sun Apr  5 12:46:24 CEST 2009
  - adding missing prereq
